@@ -96,11 +96,11 @@ setup(name = 'ViTables', # The name of the distribution
     'Programming Language :: Python'], 
     scripts = ['scripts/vitables'], 
     packages = ['vitables', 'vitables.docBrowser', 'vitables.h5db', 
-        'vitables.nodeProperties', 'vitables.queries', 'vitables.preferences', 
+        'vitables.nodeprops', 'vitables.queries', 'vitables.preferences', 
         'vitables.vttables', 'vitables.vtwidgets', 'vitables.plugins', 
         'vitables.plugins.csv', 'vitables.plugins.timeseries'], 
     package_data = {
-        'vitables.nodeProperties': ['*.ui'], 
+        'vitables.nodeprops': ['*.ui'], 
         'vitables.preferences': ['*.ui'], 
         'vitables.queries': ['*.ui'], 
         'vitables.vtwidgets': ['*.ui'], 
