@@ -31,11 +31,11 @@ __docformat__ = 'restructuredtext'
 from PyQt4 import QtCore, QtGui
 
 import vitables.utils
-import vitables.nodeProperties.nodeInfo as nodeInfo
+import vitables.nodeprops.nodeInfo as nodeInfo
 import vitables.vtwidgets.zoomCell as zoomCell
-import vitables.vtTables.leafModel as leafModel
-import vitables.vtTables.leafView as leafView
-import vitables.vtTables.buffer as readBuffer
+import vitables.vttables.leafModel as leafModel
+import vitables.vttables.leafView as leafView
+import vitables.vttables.buffer as readBuffer
 
 class DataSheet(QtGui.QMdiSubWindow):
     """
